# PaperSorter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.scheduler  GOOGLE_AUTH_SETUP.md  LICENSE.txt  MANIFEST.in  README.md  SETTING_NOTIFICATIONS.md  SETTING_OAUTH.md  SQL_SCHEMA.sql  config.example.yml  config.yml.tmpl  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  papersorter-cli  pyproject.toml  requirements.txt  setup.py  test_get_unscored_items.py  test_pubmed.py
.github/workflows/: docs.yml
PaperSorter/: __init__.py  __main__.py  broadcast_channels.py  config.py  embedding_database.py  feed_database.py  feed_predictor.py  log.py  wsgi.py
PaperSorter/cli/: __init__.py  base.py  context.py  parser.py  types.py
PaperSorter/contrib/: tor.py
PaperSorter/data/: __init__.py  schema.py
PaperSorter/db/: __init__.py  manager.py
PaperSorter/notification/: __init__.py  base.py  discord.py  email.py  factory.py  slack.py
PaperSorter/providers/: __init__.py  base.py  factory.py  openai_client.py  openalex.py  rss.py  scholarly_database.py  semantic_scholar.py  theoldreader.py
PaperSorter/services/: __init__.py  articles.py  embedding_generator.py  feed_prediction.py  summarization.py  tldr.py
PaperSorter/static/: manifest.json
PaperSorter/tasks/: __init__.py  broadcast.py  embeddings.py  feedback.py  import.py  init.py  labeling.py  models.py  predict.py  serve.py  test.py  train.py  update.py
PaperSorter/templates/: 403.html  base.html  broadcast_queue.html  complete.html  error.html  events.html  feedback_error.html  feedback_success.html  feeds_list.html  labeling.html  login.html  paper_detail.html  pdf_search.html  settings.html  settings_base.html  settings_broadcast_queue.html  settings_channels.html  settings_events.html  settings_feed_sources.html  settings_models.html  settings_users.html  similar_articles.html  user_settings.html
PaperSorter/utils/: broadcast_hours.py  (+4 more)
docker/: config.docker.yml
docs/: Makefile  README.md  build.sh  changelog.md  codex.md  conf.py  index.rst  requirements.txt
examples/: README.md  config.yml  cron-broadcast.sh  cron-combined.sh  cron-update.sh  crontab.example  papersorter.service
migrations/: add-predicted-preferences-score-index.sql  add_broadcast_limit.sql  add_notes_to_models.sql  add_primary_channel_to_users.sql  version-0.3-to-0.4.sql
tools/: create-admin-user.py  deduplicate-feeds.py  dump-sql-schema.py  experimental-rss-traverser.py
(+66 files in other folders)
